--- a/src/app/pages/notifications-page/notifications.component.html
+++ b/src/app/pages/notifications-page/notifications.component.html
@@ -25,7 +25,7 @@
 
         <div *ngFor="let notification of notificationsByDate.entities">
           <div class="notifications__content__notification" (click)="readNotification(notification)">
-            <div class="notifications__content__notification__image"><img src="assets/images/alert-icon.svg" alt=""></div>
+            <div class="notifications__content__notification__image"><img src="assets/images/{{notification.getIconName()}}" alt=""></div>
             <div class="notifications__content__notification__message">{{notification.body}}</div>
             <div class="notifications__content__notification__date">
               <span>{{notification.createdAt.format('MMM Do')}}</span>
