--- a/src/app/navigation/topnav/topnav.component.scss
+++ b/src/app/navigation/topnav/topnav.component.scss
@@ -133,7 +133,7 @@ $main-color: #9B9A9B;
         z-index: 5;
         width: 210px;
         max-height: 230px;
-        box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
         overflow: auto;
       }
     }
