--- a/src/app/navigation/alerts-quick/alerts-quick.component.html
+++ b/src/app/navigation/alerts-quick/alerts-quick.component.html
@@ -1,5 +1,5 @@
 <alert-component *ngFor="let alert of alerts" [alert]="alert" (clear)="dismissAlert($event)"></alert-component>
 <div class="alerts-quick__more" *ngIf="count && count > 0">
   <div class="alerts-quick__more__count">YOU HAVE {{count}} MORE ALERTS</div>
-  <div class="alerts-quick__more__action">View</div>
+  <div class="alerts-quick__more__action" [routerLink]="['/notifications']" [queryParams]="{view: 'alerts'}">View</div>
 </div>
