--- a/src/app/pages/notifications-page/notifications.component.html
+++ b/src/app/pages/notifications-page/notifications.component.html
@@ -7,44 +7,10 @@
 </div>
 <md-tab-group class="no-header" [(selectedIndex)]="selectedIndex">
   <md-tab>
-    <div class="notifications"
-         infiniteScroll
-         [infiniteScrollDistance]="2"
-         [infiniteScrollThrottle]="300"
-         [scrollWindow]="false"
-         (scrolled)="onScroll()">
-
-      <div class="notifications__content">
-
-        <div class="notifications__content__no-results" *ngIf="isEmpty && !(notificationsService.requestInProgress$ | async)">
-          You don't have any notifications at this time...
-        </div>
-
-        <div *ngFor="let notificationsByDate of notsByDate">
-
-          <div *ngIf="notificationsByDate.entities.length > 0">
-            <div class="notifications__content__title">{{notificationsByDate.label}}</div>
-
-            <div *ngFor="let notification of notificationsByDate.entities">
-              <div class="notifications__content__notification" (click)="readNotification(notification)">
-                <div class="notifications__content__notification__image"><img src="assets/images/{{notification.getIconName()}}" alt=""></div>
-                <div class="notifications__content__notification__message">{{notification.body}}</div>
-                <div class="notifications__content__notification__date">
-                  <span>{{notification.createdAt.format('MMM Do')}}</span>
-                  <div *ngIf="!notification.readAt"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-        <md-spinner *ngIf="notificationsService.requestInProgress$ | async"></md-spinner>
-      </div>
-    </div>
+    <notifications-section></notifications-section>
   </md-tab>
 
   <md-tab>
-    
+    <alerts-section></alerts-section>
   </md-tab>
 </md-tab-group>
