--- a/src/app/pages/dashboard-page/movers-card/movers-card.component.html
+++ b/src/app/pages/dashboard-page/movers-card/movers-card.component.html
@@ -33,7 +33,7 @@
         </ng-template>
       </ng-container>
       <ng-template #moversLoader>
-        <md-spinner></md-spinner>
+        <table-loader [numberOfRows]="5" [rowHeight]="20" [rowMarginVertical]="18"></table-loader>
       </ng-template>
     </ng-template>
   </div>
