--- a/src/app/pages/search-page/perfect-match/perfect-product/perfect-product.component.html
+++ b/src/app/pages/search-page/perfect-match/perfect-product/perfect-product.component.html
@@ -34,5 +34,5 @@
     </div>
   </div>
 
-  <ng-template #spin><md-spinner></md-spinner></ng-template>
+  <ng-template #spin><table-loader [rowHeight]="30"></table-loader></ng-template>
 </div>
