--- a/src/app/pages/search-page/search.component.html
+++ b/src/app/pages/search-page/search.component.html
@@ -113,7 +113,9 @@
             </table-pagination>
           </div>
           <entity-list *ngIf="searchResultsToDisplay.length > 0 && !fetchingData" [data]="searchResultsToDisplay | filterSearchResults: filterValue" [query]="queryString"></entity-list>
-          <div class="search__content__results__cards__spinner" *ngIf="searchResultsToDisplay.length === 0 && fetchingData"><md-spinner></md-spinner></div>
+          <div class="search__content__results__cards__spinner" *ngIf="searchResultsToDisplay.length === 0 && fetchingData">
+            <table-loader [rowHeight]="50" [rowMarginVertical]="50"></table-loader>
+          </div>
           <div class="search__content__results__cards__footer">
             <table-pagination
               *ngIf="searchResultsToDisplay.length > 0"
