--- a/src/assets/scss/_search.scss
+++ b/src/assets/scss/_search.scss
@@ -286,6 +286,7 @@ $border-color: rgba(0, 0, 0, 0.2);
         width: calc(55% - 30px);
         vertical-align: top;
         font-size: 14px;
+        background: white;
 
         &__header {
           display: flex;
