--- a/src/app/pages/customers-page/customer-view/customer-rebills/customer-rebills.component.html
+++ b/src/app/pages/customers-page/customer-view/customer-rebills/customer-rebills.component.html
@@ -48,7 +48,7 @@
 
   <server-error-message (refresh)="refreshData()" *ngIf="serverError; else message"></server-error-message>
   <ng-template #message>
-    <md-spinner class="entity-view__spinner" *ngIf="loadingData && (!entities || entities.length === 0)"></md-spinner>
+    <table-loader *ngIf="loadingData && (!entities || entities.length === 0)"></table-loader>
     <div *ngIf="!loadingData && (!entities || entities.length === 0)" class="entity-view__no-results entity-view__no-results--table">No upcoming transactions found</div>
   </ng-template>
 
