--- a/src/app/pages/dashboard-page/transaction-overview/transaction-overview-card/transaction-overview-card.component.html
+++ b/src/app/pages/dashboard-page/transaction-overview/transaction-overview-card/transaction-overview-card.component.html
@@ -1,11 +1,12 @@
 <div class="transaction-overview">
+  <img  class="transaction-overview__image" src="/assets/images/{{image}}">
+
   <ng-container *ngIf="overview && mapToResult && mapToResult(overview); else loader">
-    <img  class="transaction-overview__image" src="/assets/images/{{image}}">
     <div class="transaction-overview__count">{{mapToResult(overview).count}}</div>
     <div class="transaction-overview__title">{{title}}</div>
     <div class="transaction-overview__amount">{{mapToResult(overview).amount.usd()}}</div>
   </ng-container>
   <ng-template #loader>
-    <md-spinner></md-spinner>
+    <table-loader [rowMarginHorizontal]="40" [rowHeight]="10"></table-loader>
   </ng-template>
 </div>
