--- a/src/app/pages/search-page/perfect-match/perfect-product-schedule/perfect-product-schedule.component.html
+++ b/src/app/pages/search-page/perfect-match/perfect-product-schedule/perfect-product-schedule.component.html
@@ -38,6 +38,6 @@
     </div>
   </div>
 
-  <ng-template #spin><md-spinner></md-spinner></ng-template>
+  <ng-template #spin><table-loader [rowHeight]="30"></table-loader></ng-template>
 </div>
 
