--- a/src/app/pages/search-page/perfect-match/perfect-rebill/perfect-rebill.component.html
+++ b/src/app/pages/search-page/perfect-match/perfect-rebill/perfect-rebill.component.html
@@ -51,6 +51,6 @@
     </div>
   </div>
 
-  <ng-template #spin><md-spinner></md-spinner></ng-template>
+  <ng-template #spin><table-loader [rowHeight]="30"></table-loader></ng-template>
 </div>
 
