--- a/src/app/pages/search-page/perfect-match/perfect-transaction/perfect-transaction.component.html
+++ b/src/app/pages/search-page/perfect-match/perfect-transaction/perfect-transaction.component.html
@@ -55,5 +55,5 @@
     </div>
   </div>
 
-  <ng-template #spin><md-spinner></md-spinner></ng-template>
+  <ng-template #spin><table-loader [rowHeight]="30"></table-loader></ng-template>
 </div>
