Add 'send test alert' button

--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -114,6 +114,7 @@
           </div>
 
           <div class="card-outside-button" (click)="sendTestNotification()">Send test notification</div>
+          <div class="card-outside-button" (click)="sendTestAlert()">Send test alert</div>
 
         </md-tab>
 
