--- a/src/app/navigation/layouts/default/default.layout.component.scss
+++ b/src/app/navigation/layouts/default/default.layout.component.scss
@@ -35,10 +35,10 @@ registration-form {
 }
 
 alerts-quick {
+  position: absolute;
   display: block;
   z-index: 4;
-  width: 350px;
-  position: absolute;
-  top: 0;
   right: 0;
+  width: 350px;
+  font-family: Roboto, sans-serif;
 }
