--- a/src/app/pages/campaigns-page/campaign-view/campaign-view.component.html
+++ b/src/app/pages/campaigns-page/campaign-view/campaign-view.component.html
@@ -108,6 +108,6 @@
 </div>
 
 <ng-template #spinner>
-  <md-spinner class="entity-view__spinner--main"></md-spinner>
+  <spe-loader [numberOfTabs]="4" [numberOfCards]="2" [title]="'Campaign'"></spe-loader>
 </ng-template>
 
