--- a/src/app/pages/rebills-page/rebill-view/rebill-view.component.html
+++ b/src/app/pages/rebills-page/rebill-view/rebill-view.component.html
@@ -58,5 +58,5 @@
 </div>
 
 <ng-template #spinner>
-  <md-spinner class="entity-view__spinner--main"></md-spinner>
+  <spe-loader [numberOfTabs]="2" [numberOfCards]="1" [title]="'Rebill'"></spe-loader>
 </ng-template>
