--- a/src/app/pages/smtp-providers-page/smtp-provider-view/smtp-provider-view.component.html
+++ b/src/app/pages/smtp-providers-page/smtp-provider-view/smtp-provider-view.component.html
@@ -50,6 +50,6 @@
 </div>
 
 <ng-template #spinner>
-  <md-spinner class="entity-view__spinner--main"></md-spinner>
+  <spe-loader [numberOfTabs]="2" [numberOfCards]="1" [title]="'SMTP Provider'"></spe-loader>
 </ng-template>
 
