--- a/src/app/pages/users-page/user-view/user-view.component.html
+++ b/src/app/pages/users-page/user-view/user-view.component.html
@@ -55,5 +55,5 @@
 </div>
 
 <ng-template #spinner>
-  <md-spinner class="entity-view__spinner--main"></md-spinner>
+  <spe-loader [numberOfTabs]="1" [numberOfCards]="2" [title]="'User'"></spe-loader>
 </ng-template>
