--- a/src/app/pages/dashboard-page/transaction-by/transaction-by.component.html
+++ b/src/app/pages/dashboard-page/transaction-by/transaction-by.component.html
@@ -13,7 +13,7 @@
 
   <ng-template #data>
     <chart *ngIf="transactionBy && transactionBy.count > 0; else transactionByNoData" #chart (load)="saveChart($event.context)" [options]="options"></chart>
-    <md-spinner *ngIf="!transactionBy"></md-spinner>
+    <chart *ngIf="!transactionBy" [options]="loaderOptions"></chart>
 
     <div *ngIf="transactionBy && transactionBy.count > 0" class="dashboard__table" [style.height]="calculateHeight()" [class.dashboard__table--inactive]="!showTable || !transactionBy">
       <table class="highlight">
