--- a/src/app/pages/load-balancers-page/load-balancer-view/load-balancer-view.component.html
+++ b/src/app/pages/load-balancers-page/load-balancer-view/load-balancer-view.component.html
@@ -82,5 +82,5 @@
 </div>
 
 <ng-template #spinner>
-  <md-spinner class="entity-view__spinner--main"></md-spinner>
+  <spe-loader [numberOfTabs]="1" [numberOfCards]="1" [title]="'Load Balancer'"></spe-loader>
 </ng-template>
