--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,7 @@
 @import "assets/scss/_dialogs.scss";
 @import "assets/scss/_buttons.scss";
 @import "assets/scss/_registration.scss";
+@import "assets/scss/_login.scss";
 
 /***************
   HTML Styles
