Enable dismissal of alerts from notifications quick bar

--- a/src/app/navigation/layouts/default/default.layout.component.html
+++ b/src/app/navigation/layouts/default/default.layout.component.html
@@ -13,7 +13,7 @@
     <div class="container">
       <router-outlet></router-outlet>
       <notifications-quick *ngIf="navigation.showNotifications | async" (close)="navigation.toggleNotifications(false)"></notifications-quick>
-      <alerts-quick *ngIf="!(navigation.showNotifications | async)" [style.top]="alertTopOffsetCurrent + 'px'"></alerts-quick>
+      <alerts-quick [style.display]="!(navigation.showNotifications | async) ? 'block' : 'none'" [style.top]="alertTopOffsetCurrent + 'px'"></alerts-quick>
       <div class="clearfix"></div>
     </div>
   </main>
