--- a/src/app/navigation/notifications-quick/notifications-quick.component.html
+++ b/src/app/navigation/notifications-quick/notifications-quick.component.html
@@ -12,8 +12,8 @@
       <div class="notifications-list__content__title">Alerts</div>
       <alert-component class="notifications-list__content__alert"
                        *ngFor="let alert of alerts"
-                       [alert]="alert"
-                       [enableClear]="false">
+                       (clear)="readNotification($event)"
+                       [alert]="alert">
       </alert-component>
     </ng-container>
 
