Customize spe loaders

--- a/src/app/pages/accounts-page/account-view/account-view.component.html
+++ b/src/app/pages/accounts-page/account-view/account-view.component.html
@@ -56,5 +56,5 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="1" [numberOfCards]="2" [title]="'Account'"></spe-loader>
+  <spe-loader [numberOfTabs]="1" [cardsExpression]="'300px;430px'" [title]="'Account'"></spe-loader>
 </ng-template>
