--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-view.component.html
@@ -77,5 +77,5 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="3" [numberOfCards]="1" [title]="'Affiliate'"></spe-loader>
+  <spe-loader [numberOfTabs]="3" [cardsExpression]="'100%'" [title]="'Affiliate'"></spe-loader>
 </ng-template>
