--- a/src/app/pages/email-templates-page/email-template-view/email-template-view.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-view.component.html
@@ -61,7 +61,7 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="2" [numberOfCards]="1" [title]="'Email Template'"></spe-loader>
+  <spe-loader [numberOfTabs]="2" [cardsExpression]="'650px'" [title]="'Email Template'"></spe-loader>
 </ng-template>
 
 
