--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
@@ -70,7 +70,7 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="2" [title]="'ProductSchedule'" [numberOfCards]="2"></spe-loader>
+  <spe-loader [numberOfTabs]="2" [title]="'ProductSchedule'" [cardsExpression]="'300px;l'"></spe-loader>
 </ng-template>
 
 
