--- a/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
@@ -73,5 +73,5 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="2" [numberOfCards]="3" [title]="'Merchant Provider'"></spe-loader>
+  <spe-loader [numberOfTabs]="2" [cardsExpression]="'300px;300px;300px;300px'" [title]="'Merchant Provider'"></spe-loader>
 </ng-template>
