--- a/src/app/shared/components/spe-loader/spe-loader.component.html
+++ b/src/app/shared/components/spe-loader/spe-loader.component.html
@@ -32,20 +32,22 @@
     <md-tab-group>
       <md-tab>
 
-        <div *ngFor="let c of cards" class="entity-view__card dummy-card">
-          <div class="entity-view__card__header">
-            <div class="entity-view__card__header__title dummy-card-header">
-              <div class="dummy-card-title"></div>
-              <md-icon class="dummy-card-icon">more_vert</md-icon>
+        <div class="flex-custom" [class.flex-custom--wrap]="wrap">
+          <div *ngFor="let c of cards"
+               class="entity-view__card dummy-card"
+               [style.width]="c">
+            <div class="entity-view__card__header">
+              <div class="entity-view__card__header__title dummy-card-header">
+                <div class="dummy-card-title"></div>
+                <md-icon class="dummy-card-icon">more_vert</md-icon>
+              </div>
+            </div>
+
+            <div class="entity-view__card__content">
+              <table-loader [numberOfRows]="5" [rowHeight]="18" [rowMarginVertical]="22"></table-loader>
             </div>
           </div>
-
-          <div class="entity-view__card__content">
-            <table-loader [numberOfRows]="5" [rowHeight]="18" [rowMarginVertical]="22"></table-loader>
-          </div>
-
         </div>
-
       </md-tab>
     </md-tab-group>
 
