--- a/src/app/shared/components/autocomplete/autocomplete.component.scss
+++ b/src/app/shared/components/autocomplete/autocomplete.component.scss
@@ -1,6 +1,8 @@
 .auto-complete {
   background: white;
   color: black;
+  max-height: 230px;
+  overflow: auto;
 
   &__option {
     padding: 10px 25px;
@@ -11,4 +13,8 @@
       background-color: rgba(0, 0, 0, 0.1);
     }
   }
+}
+
+.focused {
+  background: rgba(0,0,0,0.1);
 }
