--- a/src/app/navigation/topnav/topnav.component.html
+++ b/src/app/navigation/topnav/topnav.component.html
@@ -26,7 +26,7 @@
         (input)="searchInputChanged($event)"
         (keydown)="onSearchKey($event)">
     </md-input-container>
-    <autocomplete *ngIf="showSearchInput && showAutoComplete && options.length > 0" [options]="options" (select)="selectOption($event)"></autocomplete>
+    <autocomplete #autocomplete *ngIf="showSearchInput && showAutoComplete && options.length > 0" [options]="options" (select)="selectOption($event)"></autocomplete>
   </div>
 
   <div class="topnav__items--expanded">
