--- a/src/app/reports/affiliate-report/affiliate-report.component.html
+++ b/src/app/reports/affiliate-report/affiliate-report.component.html
@@ -20,6 +20,8 @@
 <table-memory
   [title]="'affiliate'"
   [data]="reportsTotal"
+  [loading]="reportSummaryLoading"
+  [loadingNumberOfRows]="1"
   [columnParams]="columnParamsTotal"
   [associationEnabled]="false"
   [dissociationEnabled]="false"
