--- a/src/app/reports/components/report-table/report-table.component.html
+++ b/src/app/reports/components/report-table/report-table.component.html
@@ -47,6 +47,8 @@
       </tbody>
     </table>
 
+    <table-loader *ngIf="loading"></table-loader>
+
     <table-pagination
       [limit]="limit"
       [paginationValues]="paginationValues"
