--- a/src/app/reports/merchant-report/merchant-report.component.html
+++ b/src/app/reports/merchant-report/merchant-report.component.html
@@ -22,6 +22,7 @@
 <report-table
   [title]="'Transaction Summary Details'"
   [data]="reportsToDisplay"
+  [loading]="loading"
   [columnParams]="columnParams"
   [limit]="limit"
   [page]="page"
