--- a/src/app/reports/summary-report/summary-report.component.html
+++ b/src/app/reports/summary-report/summary-report.component.html
@@ -24,6 +24,8 @@
 <table-memory
   [data]="reportsTotal"
   [columnParams]="columnParamsTotal"
+  [loading]="reportsSummaryLoading"
+  [loadingNumberOfRows]="1"
   [associationEnabled]="false"
   [dissociationEnabled]="false"
   [sortEnabled]="false"
@@ -35,6 +37,7 @@
 <report-table
   [title]="'Transaction Summary Details'"
   [data]="reportsToDisplay"
+  [loading]="reportsLoading"
   [columnParams]="columnParams"
   [limit]="limit"
   [page]="page"
