--- a/src/app/navigation/layouts/default/default.layout.component.scss
+++ b/src/app/navigation/layouts/default/default.layout.component.scss
@@ -34,7 +34,7 @@ registration-form {
   margin: auto;
 }
 
-alerts-quick {
+.notifications-popup {
   position: absolute;
   display: block;
   z-index: 4;
